# FirstRepo

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile.prod  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.yaml  setup.sh
src/: __init__.py  main.py  setup.py
src/config/: config.py  settings.py
src/routes/: __init__.py  location.py  location_extractor.py  main.py
src/services/: __init__.py
src/services/location/: __init__.py  index.py  type.py
src/services/location_extractor/: index.py  type.py
src/utility/: exception.py  spacy_prediction.py
tests/: __init__.py  main.py  test_location_api.py
