[tool.poetry]
name = "src"
version = "0.1.0"
description = "Location api"
authors = ["Anuj Yadav <anujy@simplifyvms.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
gino = {extras = ["starlette"], version = "^1.0.1"}
uvicorn = "^0.11.6"
gunicorn = "^20.0.4"
python-dotenv = "^0.14.0"
googlemaps = "^4.4.2"
geopy = "^2.0.0"
requests = "^2.25.1"
spacy = "3.0.0"
spacy-nightly = "^3.0.0-rc.5"
dynaconf = "^3.1.4"
boto3 = "^1.17.78"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.isort","autohooks.plugins.autopep8","autohooks.plugins.pylint"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autohooks = "^2.1.0"
autohooks-plugin-pylint = "^1.2.0"
autohooks-plugin-isort = "^1.0.0"
autopep8 = "^1.5.3"
autohooks-plugin-autopep8 = "^0.0.4"
requests = "^2.24.0"
radon = "^4.1.0"
pytest-mock = "^3.2.0"
pytest-cov = "^2.10.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"